# ProgrammingPuzzle

./: CMakeLists.txt  database.cpp  database.h  login_dialog.h  logindialog.cpp  logindialog.h  logindialog.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  question.h  questions.cpp  resource.qrc  resources.qrc
